; ModuleID = '/home/carl/AnghaBench/linux/arch/arm64/kernel/extr_cpufeature.c_arm64_ftr_set_value.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm64/kernel/extr_cpufeature.c_arm64_ftr_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arm64_ftr_bits = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.arm64_ftr_bits*, i32, i32)* @arm64_ftr_set_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arm64_ftr_set_value(%struct.arm64_ftr_bits* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.arm64_ftr_bits*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.arm64_ftr_bits* %0, %struct.arm64_ftr_bits** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.arm64_ftr_bits*, %struct.arm64_ftr_bits** %4, align 8
  %9 = call i32 @arm64_ftr_mask(%struct.arm64_ftr_bits* %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = xor i32 %10, -1
  %12 = load i32, i32* %5, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.arm64_ftr_bits*, %struct.arm64_ftr_bits** %4, align 8
  %16 = getelementptr inbounds %struct.arm64_ftr_bits, %struct.arm64_ftr_bits* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = shl i32 %14, %17
  %19 = load i32, i32* %7, align 4
  %20 = and i32 %18, %19
  %21 = load i32, i32* %5, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @arm64_ftr_mask(%struct.arm64_ftr_bits*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
